Added benchmarks launch script for Gadi

--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,8 @@ BSON = "fbb218c0-5317-5bc6-957e-2ee96dd4b1f0"
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
+FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
 FlameGraphs = "08572546-2f56-4bcf-ba4e-bab62c3a3f89"
 Gridap = "56d4f2e9-7ea1-5844-9cf6-b9c51ca7ce8e"
