* Wrote function that manually counts either fadd+fmul operations       or fma operations in matrix-free kernel for Poisson equation
    * Compared that the result provided by the manual function and the
      automatic counting provided by GFlops.jl match

--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 FillArrays = "1a297f60-69ca-5386-bcde-b61e274b549b"
 FlameGraphs = "08572546-2f56-4bcf-ba4e-bab62c3a3f89"
+GFlops = "2ea8233c-34d4-5acc-88b4-02f326385bcc"
 Gridap = "56d4f2e9-7ea1-5844-9cf6-b9c51ca7ce8e"
 IterativeSolvers = "42fd0dbc-a981-5370-80f2-aaf504508153"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
